# helix

./: Cargo.toml  flake.nix  helix.toml
book/src/: configuration.md  editor.md  keymap.md  themes.md
gix-blame-test/: Cargo.toml
gix-blame-test/src/: main.rs
helix-core/src/: diagnostic.rs  position.rs  text_annotations.rs
helix-stdx/src/: date.rs  lib.rs  time.rs
helix-term/src/: .commands.rs.swp  application.rs  commands.rs  compositor.rs  events.rs  handlers.rs
helix-term/src/commands/: lsp.rs  typed.rs
helix-term/src/handlers/: blame.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: completion.rs  document.rs  editor.rs  explorer.rs  mod.rs  statusline.rs  tree.rs
helix-term/src/ui/text_decorations/: blame.rs  diagnostics.rs
helix-vcs/: Cargo.toml
helix-vcs/src/: diff.rs  git.rs  lib.rs
helix-vcs/src/git/: blame.rs
helix-view/src/: document.rs  editor.rs  handlers.rs  tree.rs  view.rs
