[package]
name = "gix-blame-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gix = { version = "0.70.0", features = [
  "attributes",
  "status",
  "blame",
], default-features = false }
